remove startDate from schedule - not needed
